--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
   <body>
     <!-- React 挂载点：应用将直接渲染在这里，没有任何中间加载层 -->
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
